# Consultant--Tracker

./: .dockerignore  .gitignore  APPLICATION_STRUCTURE.md  ARCHITECTURE.md  CODEBASE_STRUCTURE.md  COMPLETE_FUNCTIONALITY.md  DASHBOARD_COMPLETE.md  DASHBOARD_PROGRESS.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FUNCTIONALITY_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_BACKEND.md  TEST_CASES.md  UI_MODERNIZATION.md  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  restart_backend.ps1  setup_database.py  test_resume_upload.py
.github/workflows/: Consultant--Tracker-ci.yml  deploy.yml
backend/: .env  .env.example  Dockerfile  LOGGING.md  check_mongo.py  create_admin.py  fix_db_indexes.py  migrate_users_to_separate_collections.py  requirements.txt  seed.py  seed_data.py  verify_backend.py  verify_full_flow.py  verify_login.py  verify_registration.py
backend/alembic/: env.py
backend/alembic/versions/: 7bbbcea4ce8c_initial_setup.py
backend/app/: auth.py  config.py  db.py  dependencies.py  logging_config.py  main.py  models.py  schemas.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/tests/: test_consultants.py  test_submissions.py
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  api.js  config.js  index.js
mongo-init/: init-db.js
sample_data/: consultants.csv  submissions.csv
(+120 files in other folders)
